overflowing box problem solved

--- a/bodyStyle.css
+++ b/bodyStyle.css
@@ -7,15 +7,20 @@
   /* height: 100vb; */
   position: relative;
   /* overflow: hidden; */
+
 }
 
 .topics-list {
   position: absolute;
   /* height: clamp(400px, 600px, 800px); */
-  height: 100%;
+  height: calc(100% - 10px);
   background-color: #15202b;
   text-align: start;
   margin: 0;
+  border-radius: 10px;
+  padding-left: 10px;
+  overflow-y: scroll;
+  padding-bottom: 10px;
 }
 
 .topics-list > div {
@@ -27,7 +32,6 @@
   /* height: 100%; */
   /* height: auto; */
   background-color: #15202b;
-  overflow-y: scroll;
   text-indent: 10px;
 }
 
@@ -44,6 +48,7 @@ hr {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding-bottom: 8px;
 }
 
 .details > .video-link {
@@ -88,5 +93,4 @@ button {
   width: 100%;
   /* border: 2px solid red; */
   /* height: 30vh */
-  border: 2px solid red;
 }
